[workspace]
resolver = "2"
members = [
    "frame-analyzer",
    "frame-analyzer-ebpf-common",
    "examples/simple-analyzer"
]

[workspace.package]
edition = "2021"  # 使用最新的 Rust 版本
version = "0.0.1"
authors = ["nnbhsi"]
repository = "https://github.com/HuaLuonb/frame-analyzer-pebf/"
readme = "README.md"
description = "Track the frametime of Android apps, based on pebf & uprobe"
license = "GPL-3.0"
documentation = "https://HuaLuonb.github.io/frame-analyzer-pebf"
