[workspace]
resolver = "2"
members = [
    "frame-analyzer",
    "frame-analyzer-ebpf-common",
    "examples/simple-analyzer"
]

[package]
name = "frame-analyzer-pebf"  # 确保这个名字与你在依赖中使用的名字一致
version = "0.1.0"
authors = ["HuaLuonb <your_email@example.com>"]
edition = "2021"
description = "Track the frametime of Android apps, based on pebf & uprobe"
license = "GPL-3.0"
repository = "https://github.com/HuaLuonb/frame-analyzer-pebf"
readme = "README.md"
