[workspace]
resolver = "2"
members = [
    "frame-analyzer",
    "frame-analyzer-ebpf-common",
    "examples/simple-analyzer"
]

[package]
name = "frame-analyzer-pebf"
version = "0.1.1"
edition = "2021"
authors = ["HuaLuonb"]
readme = "README.md"
repository = "https://github.com/HuaLuonb/frame-analyzer-pebf/"
description = "`dumpsys-rs` is a Rust library for retrieving and dumping service information in an Android system. It provides a convenient way to fetch detailed status information from different system services, similar to the `dumpsys` command in the Android shell."
license = "GPL-3.0"
